bin/testsuite/tests/compiler/src/errors/compiler3351.swg
#global testerror "Err0544"
#test
{
    var a = 0
    var b = 0

    #[Swag.Complete]
    switch a
    {
    case b:
        break
    }
}
